# ev3-from-the-bottom-now-we-do-not-work-in-C

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  script.sh
doc/: README.md
doc/html/: annotated.html  classes.html  claw_8c.html  claw_8h.html  claw_8h_source.html  controller_8c.html  controller_8h.html  controller_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  memwatch_8h_source.html  menudata.js  pathfinding_8c.html  pathfinding_8h.html  pathfinding_8h_source.html  sensors_8c.html  sensors_8h.html  sensors_8h_source.html  structCLAW.html  structCOLOR__SENSOR.html  structCOMMAND.html  structCOORD.html  structPATHFINDER.html  structPOSE.html  structTOUCH__SENSOR.html  structUS__SENSOR.html  structWHEELS.html  structmwData__.html  structmwGrabData__.html  structmwMarker__.html  structmwStat__.html  structpuck__t.html  (+3 more)
doc/html/index_files/: menudata.js  searchdata.js
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  (+10 more)
include/ev3/: ev3_both.h  ev3_port.c  ev3_port.yu-c
src/: claw.c  claw.h  controller.c  controller.h  main.c  pathfinding.c  pathfinding.h  sensors.c  sensors.h  wheels.c  wheels.h
(+16 files in other folders)
